[package]
name = "lirc"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asmquery = { git = "https://github.com/Vurich/asmquery.git" }
smallbitvec = "2.4"
itertools = "0.8"
